--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -5,5 +5,6 @@
 <h3>Create a new list</h3>
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
